# JackpotGame

./: .gitignore  CMakeLists.txt  Jackpot.sln  README.md
Jackpot/: CMakeLists.txt  Jackpot.cpp  Jackpot.vcxproj  Jackpot.vcxproj.filters  main.cpp
Jackpot/controllers/: gameController.cpp  gameController.h
Jackpot/models/dice/: dice.cpp  dice.h
Jackpot/models/dice/dices/: d6.cpp  d6.h
Jackpot/utility/: utils.cpp  utils.h
